--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     region: oregon
     plan: free
     branch: main
-    buildCommand: cd server && npm install
+    buildCommand: cd server && npm ci
     startCommand: cd server && npm start
     healthCheckPath: /api/health
     envVars:
